--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,31 @@ header{
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-input.value:hover{
-initial-value: "";
+input, input:hover{
+	color: #ccc;
+	border-radius: 5px;
+	border: 0px;
+	margin: 1px;
 }
 
-aside{
-	display: flex;
-	flex-direction: row;
-	background-color: blue;
+.nav-link active:hover{
+	color: #ccc;
+
 }
+
+
+/*
+input:focus { 
+    outline: none !important;
+    border-color: #719ECE;
+    box-shadow: 0 0 10px #719ECE;
+}*/
+
+/*aside{
+	display: flex;
+	flex-direction: column;
+	background-color: blue;
+}*/
 
 /*
 .menu-principal{
@@ -59,13 +75,15 @@ aside{
 */
 section{
 	background-color: #b48955;
-	/*width: 400px;
-	height: 400px;*/
+	/*width: 400px;*/
+	height: 400px;
 	border-radius: 0;
 	align-items:baseline;
 	color: #ffffffff;
 	margin: 1px;
+	/*opacity: .7;*/
 }
+
 /*
 section:hover{
 	background-color: #dab58a;
@@ -76,12 +94,14 @@ section:hover{
 }*/
 
 nav ul li{
+	color: #ffffffff;
 	display: inline-flex;
 	padding: 5px;
 }
 
 nav ul li a{
 	display: block;
+	color: #ffffffff;
 	background-color: #b48955;
 	height: 40px;
 	padding: 10px;
@@ -94,7 +114,7 @@ nav ul li a:visited, a:link{
 }
 
 nav ul li a:hover{
-	color:black;
+	color:#ffffffff;
 	background-color: #dab58a;
 }
 
