--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 body{
-	background-color:#fffbf5;
+	/*background-color:#fffbf5;*/
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	margin: 0px;
 }
 
 h1{
-	font-family: font-family: 'Cabin', sans-serif;Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+	font-family: 'Special Elite', cursive;
 	color: #ffff;
-	height: 106px;
-	font-size: 27px;
+	height: 154px;
+	font-size: 80px;
+}
+
+h2{
+	font-family: 'Cedarville Cursive', cursive;
+	color: #ffff;
+
+}
+
+h4{
+	font-family: 'Nanum Pen Script', cursive;
+	/*font-family: 'Homemade Apple', cursive;*/
+	
 }
 
 header{
 	display: block;
 	background-color: bisque;
-	height: 162px;
+	/*height: 400px;*/
 	text-align: center;
 	background-image: url(../img/pexels-mathias-pr-reding-8123067.jpg);
 	background-position: center;
@@ -77,13 +89,15 @@ input:focus {
 */
 section{
 	background-color: #b48955;
-	/*width: 400px;
-	height: 400px;*/
-	border-radius: 0;
-	align-items:baseline;
-	color: #ffffffff;
-	margin: 1px;
-	opacity: .7;
+/*	width: 400px;*/
+/*	height: 400px;*/
+/*	border-radius: 0;*/
+/*	align-items:baseline;*/
+/*	color: #000;*/
+/*	margin: 1px;*/
+/*	opacity: .7;*/
+margin: 0;
+padding: 0;
 }
 
 /*
@@ -94,7 +108,7 @@ section:hover{
 	align-items:baseline;
 	color:black;
 }*/
-
+/*
 nav ul li{
 	color: #ffffffff;
 	border: 0px;
@@ -103,30 +117,31 @@ nav ul li{
 	display: inline-flex;
 	
 }
-
+*/
+/*
 nav ul li a{
 	display: block;
 	color: #ffffffff;
-	/*background-color: #b48955;*/
-/*	margin: 0px;
+	background-color: #b48955;
+	margin: 0px;
 	border: 0px;
 	height: 40px;
-	padding: 0px;*/
+	padding: 0px;
 	text-decoration: none;
-	/*border-radius: 5px 30px 10px 5px;*/
-}
-
+	border-radius: 5px 30px 10px 5px;
+}*/
+/*
 nav ul li a:visited, a:link{
 	color: #ffffffff;
 }
-
+*/
 nav ul li a:hover{
 	color:#ffffffff;
-	background-color: #000;
+	background-color: #b48955;
 }
 
 footer{
 	background-color:#ffe4b5;
-	height: 55px;
+	height: 35px;
 	text-align: center;
 }
