--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 body{
-	/*background-color:#fffbf5;*/
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	margin: 0px;
 }
 
 h1{
-	font-family: 'Special Elite', cursive;
+	font-family: 'Special Elite', cursive; text-align: center;
 	color: #ffff;
-	height: 154px;
+	/*height: 154px;*/
 	font-size: 80px;
 }
 
 h2{
 	font-family: 'Cedarville Cursive', cursive;
 	color: #ffff;
-
+	margin: 0px;
+	padding: 0px;
 }
 
 h4{
-	font-family: 'Nanum Pen Script', cursive;
-	/*font-family: 'Homemade Apple', cursive;*/
-	
+	font-family: 'Nanum Pen Script', cursive;	
+}
+
+.container-fluid{ /* não excluir*/
+	padding: 0px;
+}
+
+.card-img-top:hover{
+	background-color:transparent;
+	opacity: .7;;
+}
+
+.card-body:hover{
+	background-color:snow;
+	border: 0px;
+	border-radius: 0px;
 }
 
 header{
 	display: block;
 	background-color: bisque;
-	/*height: 400px;*/
-	text-align: center;
 	background-image: url(../img/pexels-mathias-pr-reding-8123067.jpg);
-	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
 /*input{
 	color: #ccc;
 	border-radius: 5px;
@@ -89,15 +99,8 @@ input:focus {
 */
 section{
 	background-color: #b48955;
-/*	width: 400px;*/
-/*	height: 400px;*/
-/*	border-radius: 0;*/
-/*	align-items:baseline;*/
-/*	color: #000;*/
-/*	margin: 1px;*/
-/*	opacity: .7;*/
-margin: 0;
-padding: 0;
+	padding: 0;
+	margin: 0;
 }
 
 /*
@@ -117,8 +120,7 @@ nav ul li{
 	display: inline-flex;
 	
 }
-*/
-/*
+
 nav ul li a{
 	display: block;
 	color: #ffffffff;
@@ -144,4 +146,5 @@ footer{
 	background-color:#ffe4b5;
 	height: 35px;
 	text-align: center;
+
 }
